# tidy_ball

./: .gitlab-ci.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: actions.yml
tests/: test_dummy.py  test_players_statistic.py  test_stats_from_season_for_ahp.py
tests/data/: data_file_16482_2021.json  data_file_6485_2021.json  data_statisitcs_players_718522.json
tidyball/: __init__.py  dummy.py  io.py  statistics_of_players.py  stats_from_season_for_ahp.py
