[build-system]
requires = [
    "flit_core >=2,<4",
]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
author = "Nepo Rojas"
author-email = "nepo.rojas@gmail.com"
description-file = "README.md"
home-page = "https://github.com/nepito/tidy_ball"
module = "tidyball"
requires = [
    "pandas",
    "pydantic",
]
requires-python=">=3"
